# memory-store

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  dot.env  yaml-workers.md
agent-chat-import/: Cargo.toml  README.md  README_ja.md
agent-chat-import/src/: cli.rs  client.rs  common.rs  generation_workers.rs  main.rs  parser.rs  personality.rs  source.rs  summarize.rs
agent-chat-import/src/common/: canonical.rs  ids.rs  importer.rs  labels.rs  path.rs
agent-chat-import/src/source/: claude_code.rs  codex.rs  plain.rs
agent-chat-import/src/source/plain/: prune.rs
agent-chat-import/workers/daily-work-summary/: daily-work-summary-single.yaml
agent-chat-import/workers/daily-work-summary/prompts/: system_prompt.en.txt  system_prompt.ja.txt  user_tail.en.txt  user_tail.ja.txt
agent-chat-import/workers/monthly-work-summary/: monthly-work-summary-single.yaml
agent-chat-import/workers/monthly-work-summary/prompts/: system_prompt.en.txt  system_prompt.ja.txt  user_tail.en.txt  user_tail.ja.txt
agent-chat-import/workers/personality/: thread-personality-single.yaml  user-personality-merge.yaml
agent-chat-import/workers/personality/prompts/: merge_system_prompt.en.txt  merge_system_prompt.ja.txt  merge_user_tail.en.txt  merge_user_tail.ja.txt  thread_system_prompt.en.txt  thread_system_prompt.ja.txt  thread_user_tail.en.txt  thread_user_tail.ja.txt
agent-chat-import/workers/thread-reflection/: thread-reflection-single.yaml
agent-chat-import/workers/thread-reflection/prompts/: system_prompt.en.txt  system_prompt.ja.txt  user_tail.en.txt  user_tail.ja.txt
agent-chat-import/workers/thread-summary/: thread-summary-single.yaml
agent-chat-import/workers/thread-summary/prompts/: system_prompt.en.txt  system_prompt.ja.txt  user_tail.en.txt  user_tail.ja.txt
agent-chat-import/workers/weekly-work-summary/: weekly-work-summary-single.yaml
agent-chat-import/workers/weekly-work-summary/prompts/: system_prompt.en.txt  system_prompt.ja.txt  user_tail.en.txt  user_tail.ja.txt
agent-chat-import/workflows/agent-chat-import/: README.md  README_ja.md  agent-chat-import.yaml  run-import.sh
agent-chat-import/workflows/agent-chat-pipeline/: README.md  README_ja.md  agent-chat-pipeline.yaml  run-pipeline.sh
agent-chat-import/workflows/agent-chat-summary/: README.md  README_ja.md  agent-chat-summary.yaml  run-summary.sh
agent-chat-import/workflows/daily-work-summary/: README.md  README_ja.md  daily-work-summary-batch.yaml  run-daily-summary.sh
agent-chat-import/workflows/monthly-work-summary/: README.md  README_ja.md  monthly-work-summary-batch.yaml  run-monthly-summary.sh
agent-chat-import/workflows/personality/: README.md  README_ja.md  thread-personality-batch.yaml
agent-chat-import/workflows/thread-reflection/: README.md  README_ja.md  thread-reflection-batch.yaml
agent-chat-import/workflows/thread-summary/: README.md  README_ja.md  thread-summary-batch.yaml
agent-chat-import/workflows/weekly-work-summary/: README.md  README_ja.md  run-weekly-summary.sh  weekly-work-summary-batch.yaml
app/: Cargo.toml
app/src/: app.rs  module.rs
app/src/app/: media.rs  memory.rs  memory_kind.rs  memory_rating.rs  memory_vector.rs  reflection.rs  thread.rs  thread_filter_resolver.rs  thread_vector.rs
app/src/app/reflection/: aggregate.rs  build_memory_data.rs  crud.rs  distance.rs  export.rs  finalize.rs  generate.rs  redispatch.rs  runtime_flags.rs  search.rs  tests.rs  validate.rs
grpc-admin/: Cargo.toml  build.rs
grpc-admin/src/: lib.rs  protobuf.rs  rag_tools.rs  service.rs
grpc-admin/src/front/: server.rs
grpc-admin/src/service/: error_handle.rs  media.rs  memory.rs  memory_kind.rs  memory_rating.rs  memory_vector.rs  reflection.rs  reflection_vector.rs  thread.rs  thread_vector.rs  vector_decode.rs
grpc-admin/tests/: image_memory_e2e.rs  rag_manifest.rs
infra/: Cargo.toml  build.rs
infra/sql/postgres/: 001_init_postgres.sql  002_add_external_id.sql  003_reflection_schema.sql  004_media_object.sql
infra/sql/postgres/manual/: 003_phase2_rename_thread_column.sql  004_phase3_drop_system_prompt.sql  005_phase4_drop_thread_id.sql  006_thread_label.sql  007_add_thread_metadata.sql  008_reflection_origin_thread_id_and_turn_index.sql  010_add_memory_kind.sql  011_contract_memory_kind.sql
infra/sql/sqlite/: 001_schema.sql  002_add_external_id.sql  003_reflection_schema.sql  004_media_object.sql
infra/sql/sqlite/manual/: 002_thread.sql  003_phase2_rename_thread_column.sql  004_phase3_drop_system_prompt.sql  005_phase4_drop_thread_id.sql  006_thread_label.sql  007_add_external_id.sql  008_add_thread_metadata.sql  009_reflection_origin_thread_id_and_turn_index.sql  010_add_media_object.sql  011_add_memory_kind.sql  012_contract_memory_kind.sql
infra/src/: error.rs  infra.rs  lib.rs  sql.rs  test_helper.rs
infra/src/infra/: embedding_dispatch.rs  media_storage.rs  memory.rs  memory_kind_migration.rs  memory_rating.rs  memory_vector.rs  module.rs  reflection.rs  reflection_intent_dispatch.rs  reflection_intent_vector.rs  reflection_schema_test.rs  reflection_summary_dispatch.rs  resource.rs  startup_error.rs  thread_vector.rs
infra/src/infra/media_object/: rdb.rs
infra/src/infra/media_storage/: file.rs  inline.rs  s3.rs
infra/src/infra/memory/: rdb.rs  redis.rs  rows.rs
infra/src/infra/memory_rating/: rdb.rs  rows.rs
infra/src/infra/memory_vector/: config.rs  dispatcher.rs  highlight.rs  record.rs  repository.rs  safe_filter.rs  schema.rs
infra/src/infra/reflection/: aggregate_thread.rs  applied_target.rs  dictionary.rs  fact.rs  failure_mode.rs  failure_mode_convert.rs  few_shot_usage.rs  rdb.rs  rows.rs  signature_norm.rs  (+4 more)
infra/tests/: startup_error_lancedb.rs
llm-memory-plugin/: Cargo.toml  build.rs
llm-memory-plugin/protobuf/: find_all_args.proto  find_all_result.proto  search_args.proto  search_result.proto  settings.proto
llm-memory-plugin/protobuf/llm/: store_args.proto
llm-memory-plugin/src/: lib.rs  main.rs
protobuf/: Cargo.toml  build.rs
protobuf/src/: lib.rs  memory_store.rs
(+58 files in other folders)
