[workspace]

members = [
    "modules/command-utils",
    "modules/infra-utils",
    "modules/memory-utils",
    # "modules/jobworkerp-client",
    "protobuf",
    "infra",
    "app",
    "grpc-admin",
    "llm-memory-plugin",
    "agent-chat-import",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sutr"]
description = "Job-Worker plugin using llama"
repository = "https://github.com/jobworkerp-rs/llama-plugins"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.9"
async-stream = "0.3"
async-trait = { version = "0.1" }
#base64 = { version = "0.22" }
#bindgen = "0.70"
# Media storage (image memory feature): S3/minio backend + base64 for the
# test-only inline backend.
# `default-https-client` + `rustls` are REQUIRED: without an HTTP client
# implementation every S3 call fails with "dispatch failure" (no
# connector wired). minio is plain HTTP but real AWS is HTTPS, so the
# rustls TLS connector is kept. (Phase 1 shipped s3.rs without these and
# the gap only surfaced under the Phase 3 minio roundtrip tests.)
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client", "rustls"] }
aws-credential-types = { version = "1" }
base64 = { version = "0.22" }
bytes = { version = "1" }
#cc = "1.1"
clap = { version = "4.5", features = ["derive"] }
command-utils = { git = "https://github.com/sutr-app/command-utils", branch = "main" }
#criterion = "0.5"
deadpool-redis = { version = "0.18" }
debug_stub_derive = "0.3"
dotenvy = { version = "0.15" }
encoding_rs = "0.8"
envy = { version = "0.4" }
futures = { version = "0.3", features = ["alloc"] }
hf-hub = { version = "0.5" }
itertools = { version = "0.14" }
# llama-cpp-2 = { version = "0.1.85" }
# llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", rev = "2822e3ae86a66b571cc6de371feefb938f4f1da7" }
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", rev = "4d1df04fb28b247494849d018d55a7fcf42c0ee1" }
#log = { version = "0.4" }
ollama-rs = { version = "0.2", features = ["stream"] }
once_cell = { version = "1" }
#pprof = "0.13.0"
prost = { version = "0.14" }
prost-types = { version = "0.14" }
prost-build = { version = "0.14" }
#rand = { version = "0.8" }
redis = { version = "1" }
#safetensors = { version = "0.4" }
#scopeguard = { version = "1" }
schemars = { version = "1" }
serde = { version = "1" }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
smallvec = { version = "1" }
sqlx = "0.9"
stretto = { version = "0.8" }
thiserror = { version = "2" }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-health = { version = "0.14" }
tonic-reflection = { version = "0.14" }
tonic-web = { version = "0.14" }
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = { version = "2" }

# Vector / FTS dependencies (LanceDB stack — required across the workspace)
# Pinned to =0.27.2: lancedb 0.27.1 ships with lance-index 3.0.1, while we
# directly depend on lance-index "4.0" for FullTextSearchQuery. Without an
# exact pin, environments without a shared Cargo.lock can resolve to
# lancedb 0.27.1 and end up with both lance-index 3.x and 4.x in the
# graph, causing E0308 type mismatches at full_text_search() call sites.
# Also bump in lockstep when raising the lance-index major below.
lancedb = { version = "=0.27.2" }
arrow = { version = "57", default-features = false }
arrow-array = { version = "57" }
arrow-schema = { version = "57" }
lance-index = { version = "4.0" }
datafusion-common = { version = "52" }
datafusion-expr = { version = "52" }
rand = { version = "0.8" }

#[workspace.lints.rust]
#missing_docs = { level = "warn" }
#missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"
